# cs3211_project2

./: CMakeLists.txt  Makefile  README.md  common.h  input.in  main.c
model/: input_data.h  particle.c  particle.h  ppm_image.h  region.c  region.h  vector_pair.c  vector_pair.h
parallel/: p_image_generate.c  p_image_generate.h  p_image_store.c  p_image_store.h  p_initial_regions.c  p_initial_regions.h  p_initial_struct.c  p_initial_struct.h  p_main_loop.c  p_main_loop.h  p_mpi_environment.c  p_mpi_environment.h  p_swap_particles.c  p_swap_particles.h
run/: PbsFileCreator.java  input_1.in  input_10.in  input_100.in  input_1000.in  input_10000.in  input_100000.in  submit.bash
sequential/: s_image_store.c  s_initial_regions.c  s_initial_regions.h  s_main_loop.c  s_main_loop.h  s_swap_particles.c  s_swap_particles.h
serial/: s_image_generate.c  s_image_generate.h  s_image_store.h  s_initial_regions.c  s_initial_regions.h  s_main_loop.c  s_main_loop.h  s_swap_particles.c  s_swap_particles.h
util/: file_helper.c  file_helper.h  image_painter.c  image_painter.h  input_helper.c  input_helper.h  physics.c  physics.h  random.c  random.h  timer.c  timer.h
